<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekbarunit="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:key="THRESHOLD"
        android:title="@string/threshold_title"
        android:summary="@string/threshold_summary"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:defaultValue="1.5"
        />

    <EditTextPreference
        android:key="SMOOTHING"
        android:title="@string/smoothing_title"
        android:summary="@string/smoothing_summary"
        android:inputType="number"
        android:maxLength="2"
        android:defaultValue="10"
        />

    <EditTextPreference
        android:key="THICKNESS"
        android:title="@string/thickness_title"
        android:summary="@string/thickness_summary"
        android:inputType="number"
        android:maxLength="2"
        android:defaultValue="10"
        />

    <ListPreference
        android:key="UNIT"
        android:title ="@string/units_title"
        android:summary="@string/units_summary"
        android:entries="@array/UnitNames"
        android:entryValues="@array/UnitConversions"
        android:defaultValue="1"/>


</PreferenceScreen>
